{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Fighting",
            "id": "1743223c-2511-42a3-b96b-b5d7fc9dff5c",
            "actions": [
                {
                    "name": "FourDirections",
                    "type": "Value",
                    "id": "5fc13f59-f0c2-494e-8c95-5b41ea036bd0",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "975803be-6702-4356-934b-3e47a77797e7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NomalMove",
                    "type": "Button",
                    "id": "a8f9ef1c-9c37-4b5c-864f-ff7df0d10268",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialMove1",
                    "type": "Button",
                    "id": "b961b71c-0689-4b88-820c-dbbbe142042b",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "511d03ee-26f7-441a-87f6-63964202ea16",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8fa46373-2952-4ad1-90ec-73d54007e446",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "346e1ab1-c3d0-459e-bb9d-a9cfa92c1d21",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "13abc0fa-0902-4777-ad23-bb01e39e205b",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "bcd028b8-3898-4b1f-95ae-6b61effc708f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "bf000552-5e6f-4117-9d3e-80f7ec3bb312",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "dfc80a54-a119-414b-a8f3-ed6be05e30ef",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "8c8fbb51-59be-40e8-bc9d-b28be3ce139b",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/hat/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "020ee51c-c041-4604-87e8-d6b195296227",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/hat/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "3968acc7-e5a9-4f7a-92d0-13465ce73df5",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/hat/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "c2ae41be-03ed-43eb-a03b-4e360d18f30a",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "8cc7e280-f746-4fbf-a8ee-75dec6462596",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6747ae9e-e7f3-4b0d-bba6-b386820b853e",
                    "path": "<XInputController>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b0b2cd3a-134a-4d5f-9831-e55ae950980c",
                    "path": "<XInputController>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9d791f99-4519-40aa-887b-08211fd40818",
                    "path": "<XInputController>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FourDirections",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5174c2d4-0a63-4725-87f3-451ff65e0599",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93a61797-950e-4716-be91-7901a64d828a",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ba72158-d196-425b-a478-34f8d7fbcdf3",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/hat/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "1f56cec7-e85a-4f8e-82fd-af9043376534",
                    "path": "<XInputController>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f56beb85-4219-4281-9967-a0533237f25c",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NomalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "68665d76-c5ee-40a7-b855-1639ea888000",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NomalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8c13e537-3720-4406-a48b-c3b5247c5685",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "NomalMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "036d6fe3-e698-4e6b-bfba-7402436dd3a0",
                    "path": "<HID::HORI CO.,LTD. HORIPAD 4 >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialMove1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "74d990ce-b33a-4ed6-a099-71a212c5c338",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SpecialMove1",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}